add UL and Style

--- a/index.html
+++ b/index.html
@@ -6,5 +6,12 @@
   </head>
   <body>
     Hello World
+
+    <ul style="background-color:yellow;color:green;text-align:center">
+      <li>Rice</li>
+      <li>Pork</li>
+      <li>Salad</li>
+      <li>Water</li>
+    </ul>
   </body>
 </html>
