style using css file

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+     <link rel="stylesheet" href="myclass.css">
   </head>
   <body>
     Hello World
 
-    <ul style="background-color:yellow;color:green;text-align:center">
+    <ul >
       <li>Rice</li>
       <li>Pork</li>
       <li>Salad</li>
