Restore and define Check boxes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     Hello World
 
-    <ul >
-      <li>Rice</li>
-      <li>Pork</li>
-      <li>Salad</li>
-      <li>Water</li>
+    <ul>
+      <li><input type="checkbox" name="food" value="Rice">Rice</li>
+      <li><input type="checkbox" name="food" value="Pork">Pork</li>
+      <li><input type="checkbox" name="food" value="Salad">Salad</li>
+      <li><input type="checkbox" name="food" value="Water">Water</li>
     </ul>
   </body>
 </html>
