new javascript/jquery file

--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
     <meta charset="utf-8">
     <title></title>
      <link rel="stylesheet" href="myclass.css">
+     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+     <script src="myjquery.js"></script>
   </head>
   <body>
-    Hello World
+    List of Food:
+<br/>
+  <form>
+    <input class="food" type="checkbox" name="food" value="Rice" /><spam>Rice </spam><br/>
+    <input class="food" type="checkbox" name="food" value="Pork" /><spam>Pork</spam> <br/>
+    <input class="food" type="checkbox" name="food" value="Salad" /><spam>Salad</spam> <br/>
+    <input class="food" type="checkbox" name="food" value="Water"><spam>Water</spam>
+  </form>
 
-    <ul>
-      <li><input type="checkbox" name="food" value="Rice">Rice</li>
-      <li><input type="checkbox" name="food" value="Pork">Pork</li>
-      <li><input type="checkbox" name="food" value="Salad">Salad</li>
-      <li><input type="checkbox" name="food" value="Water">Water</li>
-    </ul>
-  </body>
+</body>
+
 </html>
